--- a/picTool.cabal
+++ b/picTool.cabal
@@ -34,9 +34,12 @@ library
       base >=4.7 && <5
     , binary
     , bytestring
+    , directory
     , hspec
     , http-client
     , http-conduit
+    , strings
+    , time
   default-language: Haskell2010
 
 executable picTool-exe
@@ -50,10 +53,13 @@ executable picTool-exe
       base >=4.7 && <5
     , binary
     , bytestring
+    , directory
     , hspec
     , http-client
     , http-conduit
     , picTool
+    , strings
+    , time
   default-language: Haskell2010
 
 test-suite picTool-test
@@ -69,8 +75,11 @@ test-suite picTool-test
       base >=4.7 && <5
     , binary
     , bytestring
+    , directory
     , hspec
     , http-client
     , http-conduit
     , picTool
+    , strings
+    , time
   default-language: Haskell2010
