--- a/picTool.cabal
+++ b/picTool.cabal
@@ -33,6 +33,7 @@ library
       src
   build-depends:
       aeson
+    , aeson-pretty
     , authenticate-oauth
     , base >=4.7 && <5
     , bytestring
@@ -56,6 +57,7 @@ executable picTool-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aeson
+    , aeson-pretty
     , authenticate-oauth
     , base >=4.7 && <5
     , bytestring
@@ -83,6 +85,7 @@ test-suite picTool-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aeson
+    , aeson-pretty
     , authenticate-oauth
     , base >=4.7 && <5
     , bytestring
