--- a/picTool.cabal
+++ b/picTool.cabal
@@ -26,7 +26,8 @@ source-repository head
 library
   exposed-modules:
       Download
-      GetTweet
+      Twitter.GetTweet
+      Twitter.Record
   other-modules:
       Paths_picTool
   hs-source-dirs:
@@ -38,11 +39,13 @@ library
     , base >=4.7 && <5
     , bytestring
     , directory
+    , extensible
     , hspec
     , http-client
     , http-conduit
     , lens
     , lens-aeson
+    , mtl
     , strings
     , text
     , time
@@ -63,11 +66,13 @@ executable picTool-exe
     , base >=4.7 && <5
     , bytestring
     , directory
+    , extensible
     , hspec
     , http-client
     , http-conduit
     , lens
     , lens-aeson
+    , mtl
     , picTool
     , strings
     , text
@@ -80,7 +85,7 @@ test-suite picTool-test
   main-is: Spec.hs
   other-modules:
       DownloadSpec
-      GetTweetSpec
+      Twitter.GetTweetSpec
       Paths_picTool
   hs-source-dirs:
       test
@@ -92,11 +97,13 @@ test-suite picTool-test
     , base >=4.7 && <5
     , bytestring
     , directory
+    , extensible
     , hspec
     , http-client
     , http-conduit
     , lens
     , lens-aeson
+    , mtl
     , picTool
     , strings
     , text
