--- a/picTool.cabal
+++ b/picTool.cabal
@@ -26,6 +26,7 @@ source-repository head
 library
   exposed-modules:
       Download
+      GetToken
       Twitter.GetTweet
       Twitter.Record
   other-modules:
