--- a/picTool.cabal
+++ b/picTool.cabal
@@ -41,6 +41,7 @@ library
     , authenticate-oauth
     , base >=4.7 && <5
     , bytestring
+    , data-default-class
     , directory
     , extensible
     , hspec
@@ -69,6 +70,7 @@ executable picTool-exe
     , authenticate-oauth
     , base >=4.7 && <5
     , bytestring
+    , data-default-class
     , directory
     , extensible
     , hspec
@@ -102,6 +104,7 @@ test-suite picTool-test
     , authenticate-oauth
     , base >=4.7 && <5
     , bytestring
+    , data-default-class
     , directory
     , extensible
     , hspec
